xidlc/tests/invalid/http_unary_conflicting_param_source.idl
#pragma xidlc package xidlc
#pragma xidlc version v1.0.0

interface InvalidUnaryBindingService {
    @get(path = "/users/{id}")
    string get_user(
        @path @rename("id")
        @query @rename("user_id")
        string id
    );
};
